tests/snapshots/bundled_tasks_panel__a-cursor-past-the-last-row.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ "
    text "only" ellipsize
