tests/snapshots/bundled_tasks_panel__a-multi-byte-title.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ " accent bold
    text "h" accent bold underline
    text "éllo " accent bold
    text "—" accent bold underline
    text " wörld" accent bold
  line
    text "◐ " accent
    text "日" accent bold underline
    text "本語のタスク" accent
