tests/snapshots/bundled_tasks_panel__a-running-search.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=2 scrollbar=false
  line
    text "☐ "
    text "h" accent bold underline ellipsize
    text "ost " ellipsize
    text "t" accent bold underline ellipsize
    text "ests" ellipsize
  line
    text "☑ " muted dim
    text "nothing matched here" muted dim ellipsize
  line
    text "◐ " accent bold
    text "s" accent bold underline ellipsize
    text "el" accent bold ellipsize
    text "e" accent bold underline ellipsize
    text "cted " accent bold ellipsize
    text "a" accent bold underline ellipsize
    text "nd matched" accent bold ellipsize
