tests/snapshots/bundled_tasks_panel__a-selected-row-among-others.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=false
  line
    text "☐ "
    text "first"
  line
    text "☑ " accent bold
    text "second" accent bold
  line
    text "◐ " accent
    text "third" accent
