tests/snapshots/bundled_tasks_panel__an-offset-inside-a-character.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ "
    text "a" accent bold underline
    text "bc…"
    text " " accent bold underline
    text "def"
