tests/snapshots/bundled_tasks_panel__degenerate-titles.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ " accent bold
  line
    text "☑ " muted
    text "x" muted ellipsize
    text " ⇄" accent
