tests/snapshots/bundled_tasks_panel__linked-rows.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "◐ " accent
    text "has a session" accent
    text " ⇄" accent
  line
    text "☐ " muted dim
    text "linked but filtered" muted dim
    text " ⇄" muted dim
  line
    text "☑ " muted
    text "l" accent bold underline
    text "inked and matched" muted
    text " ⇄" accent
