tests/snapshots/bundled_tasks_panel__no-tasks-focused.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
  text "no tasks — n to add" muted
