tests/snapshots/bundled_tasks_panel__one-row-per-status.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ "
    text "write the port"
  line
    text "◐ " accent
    text "review the diff" accent
  line
    text "☑ " muted
    text "ship it" muted
