tests/snapshots/bundled_tasks_panel__previewed-by-a-global-search.snap
---
source: tests/bundled_tasks_panel.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "☐ " accent bold
    text "host tests" accent bold
  line
    text "☐ "
    text "other"
